Fix skill list going to the wrong position even on high screen widths

--- a/src/assets/scss/_skills.scss
+++ b/src/assets/scss/_skills.scss
@@ -29,7 +29,6 @@
     font-size: 35px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
     flex-wrap: wrap;
 
     span:not(:last-child) {
